syntax = "proto3";

package userpayment;

option java_multiple_files = true;
option java_package = "com.haowei.userpayment";
option java_outer_classname = "UserPaymentProto";

service UserPayment {
    // A server-to-client streaming RPC.
    // Obtain the payment methods of the given user.
    rpc GetPayments(User) returns (stream Payment) {}
}

message User {
    int64 id = 1;
    string name = 2;
}

message Payment {
    string type = 1;
    int64 cardId = 2;
    User user = 3;
}

message PaymentDatabase {
    repeated Payment payment = 1;
}